...
        android:onClick="onMockLocationClicked"
        android:text="ML"
        app:layout_constraintStart_toEndOf="@+id/settingsButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clearbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="145dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="68dp"
        android:onClick="onClearRouteClick"
        android:text="Clear Route"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/settingsButton"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

